move child derivation paths into outputdescriptor